--- a/demo.html
+++ b/demo.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>seed-element Demo</title>
+  <title>pubnub-element Demo</title>
 
   <script src="../platform/platform.js"></script>
-  <link rel="import" href="seed-element.html">
+  <link rel="import" href="pubnub-element.html">
 
 </head>
 <body unresolved>
