--- a/demo.html
+++ b/demo.html
@@ -4,17 +4,15 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>pubnub-element Demo</title>
 
-  <script src="../platform/platform.js"></script>
-  <link rel="import" href="pubnub-element.html">
+  <script src="bower_components/platform/platform.js"></script>
+  <script src="https://rawgit.com/pubnub/javascript/feature-pt74838232-3/web/pubnub.js"></script>
+  <link rel="import" href="pubnub-element.html" publish_key subscribe_key auth_key uuid cipher_key noleave keepalive secret_key ssl windwoing jsonp>
+  
 
 </head>
 <body unresolved>
 
-  <p>An example of using <code>&lt;seed-element></code>:</p>
-
-  <seed-element>
-    <h2>Hello seed-element</h2>
-  </seed-element>
+  <pubnub-element publish_key="demo" subscribe_key="demo"></pubnub-element>
 
 </body>
 </html>
