--- a/demo.html
+++ b/demo.html
@@ -5,14 +5,13 @@
   <title>pubnub-element Demo</title>
 
   <script src="bower_components/platform/platform.js"></script>
-  <script src="https://rawgit.com/pubnub/javascript/feature-pt74838232-3/web/pubnub.js"></script>
   <link rel="import" href="pubnub-element.html" publish_key subscribe_key auth_key uuid cipher_key noleave keepalive secret_key ssl windwoing jsonp>
   
 
 </head>
 <body unresolved>
 
-  <pubnub-element publish_key="demo" subscribe_key="demo"></pubnub-element>
+  <core-pubnub publish_key="demo" subscribe_key="demo" id="demo"></core-pubnub>
 
 </body>
 </html>
