--- a/pubnub-element.html
+++ b/pubnub-element.html
@@ -1,23 +1,21 @@
 <link rel="import" href="bower_components/polymer/polymer.html"> 
+<script src="https://cdn.pubnub.com/pubnub.min.js"></script>
 
 <!--
 Element providing solution to no problem in particular.
 
-##### Example
 
-    <seed-element></seed-element>
-
-@element seed-element
-@blurb Element providing solution to no problem in particular.
+@element core-pubnub
+@blurb Element providing encapsulation of the PubNub JS SDK.
 @status alpha
-@homepage http://polymerlabs.github.io/seed-element
+@homepage 
 -->
-<polymer-element name="pubnub-element" attributes="publish_key subscribe_key auth_key uuid cipher_key noleave keepalive secret_key ssl windwoing jsonp">
+<polymer-element name="core-pubnub" constructor="corePubNub" attributes="publish_key subscribe_key auth_key uuid cipher_key noleave keepalive secret_key ssl windwoing jsonp">
 
 
   <script>
 
-    Polymer('pubnub-element', {
+    Polymer('core-pubnub', {
       /**
         * The 'publish_key' attribute sets the publish_key to be used for publishing messages to a channel.
         * REQUIRED
@@ -44,9 +42,9 @@ Element providing solution to no problem in particular.
         *
         * @attribute auth_key 
         * @type string
-        * @default ''
+        * @default undefined
         */
-      auth_key: '',
+      auth_key: undefined,
       
       /**
         * The 'uuid' attribute sets the unique user id to be used to identify the client. By default a randomly generated uuid is created by the client.
@@ -56,7 +54,7 @@ Element providing solution to no problem in particular.
         * @type string
         * @default randomly generated
         */
-      uuid: '',
+      uuid: undefined,
 
       /**
         * The 'cipher_key' attribute sets the cryptographic key to use for message level encryption with AES.
@@ -64,9 +62,9 @@ Element providing solution to no problem in particular.
         *
         * @attribute cipher_key
         * @type string
-        * @default ''
+        * @default undefined
         */
-      cipher_key: '',
+      cipher_key: undefined,
 
       /**
         * The 'noleave' attribute, when set to true, explicitly disables presence leave events.
@@ -76,7 +74,7 @@ Element providing solution to no problem in particular.
         * @type boolean
         * @default false
         */
-      noleave: false,
+      noleave: undefined,
 
       /**
         * The 'keepalive' attribute sets the interval betwween keepalive pings.
@@ -86,7 +84,7 @@ Element providing solution to no problem in particular.
         * @type number
         * @default 60
         */
-      keepalive: 60,
+      keepalive: undefined,
 
       /**
         * The 'secret_key' attribute sets the secret_key used only to sign Access Manager API messages.
@@ -94,9 +92,9 @@ Element providing solution to no problem in particular.
         *
         * @attribute secret_key
         * @type string
-        * @default ''
+        * @default undefined 
         */
-      secret_key: '',
+      secret_key: undefined,
 
       /**
         * The 'ssl' attribute, when set to true, enables transport layer encryption with SSL/TLS. 
@@ -106,7 +104,7 @@ Element providing solution to no problem in particular.
         * @type boolean
         * @default false
         */
-      ssl: false,
+      ssl: undefined,
 
       /**
         * The 'windowing' sets the time interval in milliseconds that PubNub will use to optimize message delivery by bundling them into a single compressed payload.
@@ -114,9 +112,9 @@ Element providing solution to no problem in particular.
         *
         * @attribute windowing
         * @type number
-        * @default 10
+        * @default undefined
         */
-      windowing: 10,
+      windowing: undefined,
 
       /**
        * The `jsonp` attribute, when set to true, explicitly enforces JSON(P) as the data transport method.
@@ -124,30 +122,42 @@ Element providing solution to no problem in particular.
        *
        * @attribute jsonp
        * @type boolean
-       * @default false
+       * @default undefined
        */
-      jsonp: false,
+      jsonp: undefined,
       
 
       ready: function() {
           var settings = {
             publish_key: this.publish_key,
             subscribe_key: this.subscribe_key,
-            auth_key: this.auth_key || undefined,
-            uuid: this.uuid || undefined,
-            cipher_key: this.cipher_key || undefined,
-            noleave: this.noleave || undefined,
-            keepalive: this.keepalive || undefined,
-            secret_key: this.secret_key || undefined,
-            ssl: this.ssl || undefined,
-            windowing: this.windowing || undefined,
-            jsonp: this.jsonp || undefined
+            auth_key: this.auth_key,
+            uuid: this.uuid,
+            cipher_key: this.cipher_key,
+            noleave: this.noleave,
+            keepalive: this.keepalive,
+            secret_key: this.secret_key,
+            ssl: this.ssl,
+            windowing: this.windowing,
+            jsonp: this.jsonp
           }
           console.log(JSON.stringify(settings));
-          // this.pubnub = PUBNUB.init(settings);
-          window.pubnub = PUBNUB.init(settings);
+          this.pubnub = PUBNUB.init(settings);
+          // window.pubnub = PUBNUB.init(settings);
           console.log("WASSUP");
       },
+
+      /**
+       * The subscribe method subscribes
+       *
+       */
+      subscribe: function(channel) {
+
+      },
+
+      test: function() {
+        console.log("TESTED");
+            },
 
       /**
        * The `sayHello` method will return a greeting.
