More pubnub elements

--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,11 @@
 </head>
 <body unresolved>
 
-  <core-pubnub publish_key="demo" subscribe_key="demo" id="demo"></core-pubnub>
+  <core-pubnub publish_key="demo" subscribe_key="demo" id="demo">
+    <core-pubnub-subscribe channel="what">
+      
+    </core-pubnub-subscribe>
+  </core-pubnub>
 
 </body>
 </html>
