--- a/demo.html
+++ b/demo.html
@@ -6,15 +6,16 @@
 
   <script src="bower_components/platform/platform.js"></script>
   <link rel="import" href="pubnub-element.html" publish_key subscribe_key auth_key uuid cipher_key noleave keepalive secret_key ssl windwoing jsonp>
-  
+
 
 </head>
 <body unresolved>
 
-  <core-pubnub publish_key="demo" subscribe_key="demo" id="demo">
-    <core-pubnub-subscribe channel="what">
-      
+  <core-pubnub publish_key="demo" subscribe_key="demo" id="core">
+    <core-pubnub-subscribe channel="what" id="sub">
     </core-pubnub-subscribe>
+    <core-pubnub-publish channel="what" id="pub" message='{ "first": "Bob", "last": "Dobbs" }'>
+    </core-pubnub-publish>
   </core-pubnub>
 
 </body>
