--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,8 @@
   <core-pubnub publish_key="demo" subscribe_key="demo" id="core">
     <core-pubnub-subscribe channel="what" id="sub">
     </core-pubnub-subscribe>
-    <core-pubnub-publish channel="what" id="pub" message='{ "first": "Bob", "last": "Dobbs" }'>
+    <!--<core-pubnub-publish channel="what" id="pub" message='{ "first": "Bob", "last": "Dobbs" }'>-->
+    <core-pubnub-publish channel="what" id="pub" message='["wat", "DAH" ]'>
     </core-pubnub-publish>
   </core-pubnub>
 
